fix scrolling and carousel jumping

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,41 @@ div.dropdown.navbar-right:focus{
   outline:0;
 }
 
+img.carousel-img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.carousel {
+    width: 100%;
+    height: 100%;
+}
+ .carousel.m-content{
+   border: 0px;
+   padding: 0px;
+   background-color: rgba(0, 0, 0, 0);
+    top: 50%;
+    margin-left: 0px;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+ }
+
+ .carousel-inner {
+     position: absolute;
+     overflow: hidden;
+     width: 100%;
+     height: 100%;
+     left: 50%;
+     top: 50%;
+     transform: translateX(-50%) translateY(-50%);
+ }
+ .carousel-item{
+ height: 100%;
+width: 100%;
+}
 .navbar-header:hover{
   cursor: default;
 }
@@ -246,11 +281,6 @@ input:focus{
    background-color: rgba(0, 0, 0, 0);
  }
 
- .carousel.m-content{
-   border: 0px;
-   padding: 0px;
-   background-color: rgba(0, 0, 0, 0);
- }
  .search-results{
    top: 48px;
    padding: 0;
